# rl-overview

./: CLAUDE.md  README.md  pyproject.toml
conf/: config.yaml
conf/algo/: a2c.yaml  c51.yaml  dqn.yaml  dqn_rainbow.yaml  dyna_q.yaml  mbpo_discrete.yaml  mc_control.yaml  mcts.yaml  policy_iteration.yaml  ppo.yaml  q_learning.yaml  reinforce.yaml  sarsa.yaml  sarsa_lambda.yaml  shooting.yaml  td0_eval.yaml  td_lambda_eval.yaml  ts.yaml  ucb1.yaml  value_iteration.yaml
conf/exp/: gym_dqn_sweep.yaml  sweep_q_learning.yaml
src/rl_overview/: __init__.py  train.py
src/rl_overview/algos/: common.py
src/rl_overview/algos/dqn/: c51.py  dqn.py
src/rl_overview/algos/mc/: mc_control.py
src/rl_overview/algos/model/: dyna_q.py  ensemble_world_model.py  mbpo_discrete.py  world_model.py
src/rl_overview/algos/pg/: a2c.py  ppo.py  reinforce.py
src/rl_overview/algos/planning/: mcts.py
src/rl_overview/algos/td/: q_learning.py  (+4 more)
src/rl_overview/bandits/: bernoulli.py  ts.py  ucb.py
src/rl_overview/cli/: aggregate_sweep.py  ascii_plot.py  bandits_run.py  ensemble_plan_run.py  exp_run.py  gym_run.py  gym_sweep_dqn.py  marl_run.py  model_plan_run.py  plan_run.py  plot_metrics.py  prefs_run.py  rlvr_run.py  sweep_q_learning.py
src/rl_overview/envs/: base.py  gridworld1d.py  rlvr_binary.py  wrappers.py
src/rl_overview/llm/: dpo.py  prefs_numpy.py  reward_models.py
src/rl_overview/marl/: independent_q.py
src/rl_overview/nn/: dqn_net.py  noisy.py  torch_utils.py
src/rl_overview/replay/: buffer.py  prioritized.py
src/rl_overview/utils/: logger.py  printing.py
(+3 files in other folders)
